--- a/OnlineBookStore/build.gradle
+++ b/OnlineBookStore/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     implementation 'org.modelmapper:modelmapper:3.1.1'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     testImplementation 'org.springframework.security:spring-security-test'
+    implementation 'org.flywaydb:flyway-core:7.0.1'
 }
 
 tasks.named('test') {
